# nrg-demo

./: .gitignore  .replit  README.md  app.py  img.py  model.joblib  model.py  pyproject.toml  requirements.txt
