[tool.poetry]
name = "nrg"
version = "0.1.0"
description = "Web app to demonstrate NRG's prototype"
authors = ["Thomas Breydo <tbreydo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
joblib = "^0.17.0"
dill = "^0.3.2"
streamlit = "^0.69.2"
scikit-learn = "^0.23.2"
pandas = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
